--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8"
+    "@types/react-dom": "^18.2.8",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.0",
+    "babel-loader": "^9.1.3"
   }
 }
