--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
-    "babel-loader": "^9.1.3"
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.5.3"
   }
 }
