--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "dev": "webpack-dev-server -c build/webpack.dev.js",
+    "build": "webpack -c build/webpack.prod.js"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -12,6 +16,8 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
     "babel-loader": "^9.1.3",
-    "html-webpack-plugin": "^5.5.3"
+    "html-webpack-plugin": "^5.5.3",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   }
 }
