--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "dev": "webpack-dev-server -c build/webpack.dev.js",
-    "build": "webpack -c build/webpack.prod.js"
+    "build:dev": "cross-env NODE_ENV=development BASE_ENV=development webpack-dev-server -c build/webpack.dev.js",
+    "build:test": "cross-env NODE_ENV=development BASE_ENV=test webpack-dev-server -c build/webpack.dev.js",
+    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -18,6 +19,7 @@
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.3",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "cross-env": "^7.0.3"
   }
 }
