--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "html-webpack-plugin": "^5.5.3",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "style-loader": "^3.3.3",
+    "css-loader": "^6.8.1",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3"
   }
 }
