--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "style-loader": "^3.3.3",
     "css-loader": "^6.8.1",
     "less": "^4.2.0",
-    "less-loader": "^11.1.3"
+    "less-loader": "^11.1.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^7.0.0 || ^8.0.1 ^8.1.0",
+    "postcss-loader": "^7.3.3"
   }
 }
