--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "less-loader": "^11.1.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^7.0.0 || ^8.0.1 ^8.1.0",
-    "postcss-loader": "^7.3.3"
+    "postcss-loader": "^7.3.3",
+    "@babel/preset-env": "^7.22.20",
+    "core-js": "^3.32.2"
   }
 }
