--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react" // react18这里也可以改成react-jsx
+    "jsx": "react", // react18这里也可以改成react-jsx
+    // 开启装饰器使用
+    "experimentalDecorators": true
   },
   "include": ["./src"]
 }
