--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development BASE_ENV=development webpack-dev-server -c build/webpack.dev.js",
     "build:test": "cross-env NODE_ENV=development BASE_ENV=test webpack-dev-server -c build/webpack.dev.js",
-    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js"
+    "build:prod": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.prod.js",
+    "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -31,6 +32,7 @@
     "@babel/preset-env": "^7.22.20",
     "core-js": "^3.32.2",
     "@babel/plugin-proposal-decorators": "^7.23.0",
-    "copy-webpack-plugin": "^11.0.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "speed-measure-webpack-plugin": "^1.5.0"
   }
 }
