--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "noEmit": true,
     "jsx": "react", // react18这里也可以改成react-jsx
     // 开启装饰器使用
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["./src"]
 }
