--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.0",
     "copy-webpack-plugin": "^11.0.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "thread-loader": "^4.0.2"
+    "thread-loader": "^4.0.2",
+    "webpack-bundle-analyzer": "^4.9.1"
   }
 }
