--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "thread-loader": "^4.0.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "mini-css-extract-plugin": "^2.7.6",
-    "css-minimizer-webpack-plugin": "^5.0.1"
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "terser-webpack-plugin": "^5.3.9"
   }
 }
