--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js"
   },
   "dependencies": {
+    "antd": "^5.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
