--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "antd": "^5.9.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8"
   },
   "devDependencies": {
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
     "@babel/core": "^7.23.0",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
