--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=production webpack -c build/webpack.analy.js"
   },
   "dependencies": {
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8"
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "webpack": "^5.88.2",
