--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "antd": "^5.9.4",
-    "axios": "1.2.0",
-    "https": "^1.0.0",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
