--- a/package.json
+++ b/package.json
@@ -18,33 +18,32 @@
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
     "@babel/core": "^7.23.0",
+    "@babel/plugin-proposal-decorators": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.32.2",
     "cross-env": "^7.0.3",
-    "style-loader": "^3.3.3",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^5.5.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
-    "autoprefixer": "^10.4.16",
+    "mini-css-extract-plugin": "^2.7.6",
+    "mockjs": "^1.1.0",
     "postcss": "^7.0.0 || ^8.0.1 ^8.1.0",
     "postcss-loader": "^7.3.3",
-    "@babel/preset-env": "^7.22.20",
-    "core-js": "^3.32.2",
-    "@babel/plugin-proposal-decorators": "^7.23.0",
-    "copy-webpack-plugin": "^11.0.0",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "thread-loader": "^4.0.2",
-    "webpack-bundle-analyzer": "^4.9.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "css-minimizer-webpack-plugin": "^5.0.1",
+    "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
-    "mockjs": "^1.1.0"
+    "thread-loader": "^4.0.2",
+    "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   }
 }
