--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "thread-loader": "^4.0.2",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
   }
