--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,6 @@
       "~/*": ["./*"]
     }
   },
-  "include": ["./src", "mock"]
+  "include": ["./src", "mock"],
+  "exclude": ["node_modules"]
 }
