--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "gh-pages": "^6.0.0",
+    "glob-all": "^3.3.1",
     "html-webpack-plugin": "^5.5.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
@@ -56,6 +57,7 @@
     "mockjs": "^1.1.0",
     "postcss": "^7.0.0 || ^8.0.1 ^8.1.0",
     "postcss-loader": "^7.3.3",
+    "purgecss-webpack-plugin": "^4.1.3",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
