--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-typescript": "^7.23.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.32.2",
     "cross-env": "^7.0.3",
