--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^10.0.0",
@@ -59,6 +60,7 @@
     "postcss": "^7.0.0 || ^8.0.1 ^8.1.0",
     "postcss-loader": "^7.3.3",
     "purgecss-webpack-plugin": "^4.1.3",
+    "react-refresh": "^0.14.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
