--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-typescript": "^7.23.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "autoprefixer": "^10.4.16",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
