--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "react-router-dom",
     "mobx"
   ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS"
+    }
+  },
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development BASE_ENV=development webpack-dev-server -c build/webpack.dev.js",
     "build:test": "cross-env NODE_ENV=development BASE_ENV=test webpack-dev-server -c build/webpack.dev.js",
@@ -41,6 +46,8 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
+    "@commitlint/cli": "^17.7.2",
+    "@commitlint/config-conventional": "^17.7.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "autoprefixer": "^10.4.16",
     "babel-eslint": "^10.1.0",
@@ -54,6 +61,7 @@
     "gh-pages": "^6.0.0",
     "glob-all": "^3.3.1",
     "html-webpack-plugin": "^5.5.3",
+    "husky": "^8.0.3",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "mini-css-extract-plugin": "^2.7.6",
