--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-dom": "^18.2.8",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
