--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "kennana",
   "license": "MIT",
   "repository": "https://github.com/KenNaNa/react-admin.git",
-  "homepage": "https://kennana.github.io",
+  "homepage": "https://kennana.github.io/react-admin/",
   "keywords": [
     "react",
     "admin",
