--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router": "^6.16.0",
