--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
+    "driver.js": "^1.3.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "mobx": "^6.10.2",
